--- a/angular-src/src/app/components/dashboard/dashboard.component.html
+++ b/angular-src/src/app/components/dashboard/dashboard.component.html
@@ -1,2 +1,3 @@
 <h2 class="page-header">Dashboard</h2>
 <p>Welcome to your dashboard</p>
+<a class="btn btn-primary btn-lg" [routerLink]="['/sessions/upload']">Upload a New Recording </a>
