--- a/angular-src/src/app/components/session-details/session-details.component.html
+++ b/angular-src/src/app/components/session-details/session-details.component.html
@@ -18,15 +18,12 @@
               </canvas>
             </div>
           </div>
-          <div class="col-md-12" style="margin-bottom: 10px">
-            <button class="btn btn-primary" (click)="setChart()">CLICK TO LOAD DATA</button>
-          </div>
         </div>
       </div>
     </div>
   </div>
 </div>
 <div class="pull-right">
-  <a class="btn btn-info" href="sessions/edit/{{session._id}}">Edit Details</a> |
-  <a class="btn btn-danger" href="sessions" ng-click="removeSession(session._id)">Delete Session</a>
+  <a class="btn btn-warning" href="sessions/edit/{{session._id}}">Edit Details</a> |
+  <a class="btn btn-danger" (click)="this.deleteSession()">Delete Session</a>
 </div>
