--- a/angular-src/src/app/components/upload-session/upload-session.component.html
+++ b/angular-src/src/app/components/upload-session/upload-session.component.html
@@ -1,35 +1,30 @@
 <div>
   <h1>Upload a Session</h1>
-  <form (ngSubmit)="onSubmit()" #uploadSessionForm="ngForm">
+  <form [formGroup]="form" (ngSubmit)="onSubmit()">
     <div class="form-group">
       <label for="name">Session Name</label>
-      <input type="text" class="form-control" id="name" required [(ngModel)]="model.name" name="name" #name="ngModel">
-      <div [hidden]="name.valid || name.pristine" class="alert alert-danger">
-        Name is required
-      </div>
+      <input type="text" class="form-control" id="name" placeholder="Enter A Name:  (Test Session 123)" formControlName="name">
     </div>
-
     <div class="form-group">
       <label for="record_date">Date Recorded</label>
-      <input type="text" class="form-control" id="record_date" [(ngModel)]="model.record_date" name="record_date">
+      <input type="text" class="form-control" id="record_date" placeholder="Enter A Date: (05/15/2018)" formControlName="record_date">
     </div>
-
     <div class="form-group">
       <label for="session_type">Session Type</label>
-      <select class="form-control" id="session_type" required [(ngModel)]="model.session_type" name="session_type">
+      <select class="form-control" id="session_type" name="session_type" placeholder="Enter A Date: (05/15/2018)" formControlName="session_type">
         <option *ngFor="let opt of session_type_options" [value]="opt">{{opt}}</option>
       </select>
     </div>
 
     <div class="form-group">
-      <label>Upload Raw File: </label>
-      <input type="file" file-model="session.file" id="file" required [(ngModel)]="model.file" name="file">
-      <p class="help-block">txt file from oarlock</p>
+      <label for="file">Upload the Recorded File: </label>
+      <input type="file" id="file" (change)="onFileChange($event)" #fileInput>
+      <button type="button" class="btn btn-default" (click)="clearFile()">clear file</button>
     </div>
 
-    <button type="button" class="btn btn-warning" (click)="clearInput(); uploadSessionForm.reset()">Clear</button>
-    <button type="submit" class="btn btn-success" [disabled]="!uploadSessionForm.form.valid">Submit</button>
-
+    <button type="submit" [disabled]="form.invalid || loading" class="btn btn-success">Submit
+      <i class="fa fa-spinner fa-spin fa-fw" *ngIf="loading"></i>
+    </button>
   </form>
+
 </div>
-{{diagnostic}}
