--- a/angular-src/src/app/components/upload-session/upload-session.component.html
+++ b/angular-src/src/app/components/upload-session/upload-session.component.html
@@ -15,14 +15,13 @@
         <option *ngFor="let opt of session_type_options" [value]="opt">{{opt}}</option>
       </select>
     </div>
-
     <div class="form-group">
       <label for="file">Upload the Recorded File: </label>
       <input type="file" id="file" (change)="onFileChange($event)" #fileInput>
       <button type="button" class="btn btn-default" (click)="clearFile()">clear file</button>
     </div>
 
-    <button type="submit" [disabled]="form.invalid || loading" class="btn btn-success">Submit
+    <button type="submit" [disabled]="form.invalid || loading" class="btn btn-primary">Submit
       <i class="fa fa-spinner fa-spin fa-fw" *ngIf="loading"></i>
     </button>
   </form>
