--- a/angular-src/src/app/components/home/home.component.css
+++ b/angular-src/src/app/components/home/home.component.css
@@ -1,5 +1,5 @@
 .jumbotron-custom {
-  background-image: url("../../../img/bg.jpg");
+  background-image: url("../../../img/bg.png");
   height: 100vh;
   width: 100%;
   background-repeat: no-repeat;
