--- a/angular-src/src/app/components/home/home.component.html
+++ b/angular-src/src/app/components/home/home.component.html
@@ -1,27 +1,13 @@
-<div class="jumbotron jumbotron-custom text-center">
-  <h1>RTS Development App</h1>
-  <p class="lead">An investigation into the feasibility and practicality of low-cost oarlock instrumentation.</p>
-  <div *ngIf="!authService.loggedIn()">
-    <a class="btn btn-info" [routerLink]="['/register']">Register</a>
-    <a class="btn btn-primary" [routerLink]="['/login']">Login </a>
-  </div>
-  <div *ngIf="authService.loggedIn()">
-    <a class="btn btn-primary btn-lg" [routerLink]="['/sessions']">View Data</a>
-  </div>
-</div>
-<div class="container">
-  <div class="row">
-    <div class="col-md-4">
-      <h3>Express Backend</h3>
-      <p>A rock solid Node.js/Express server using Mongoose to organize models and query the database</p>
+<div>
+  <div class="jumbotron logo text-center">
+    <h1>RTS Development App</h1>
+    <h3 class="lead">An investigation into the feasibility and practicality of low-cost oarlock instrumentation.</h3>
+    <div *ngIf="!authService.loggedIn()">
+      <a class="btn btn-info" [routerLink]="['/register']">Register</a>
+      <a class="btn btn-primary" [routerLink]="['/login']">Login </a>
     </div>
-    <div class="col-md-4">
-      <h3>Angular-CLI</h3>
-      <p>Angular-CLI to generate components, services and more. Local dev server and easy compilation</p>
-    </div>
-    <div class="col-md-4">
-      <h3>JWT Tokens</h3>
-      <p>Full featured authentication using JSON web tokens. Login and store user data</p>
+    <div *ngIf="authService.loggedIn()">
+      <a class="btn btn-primary btn-lg" [routerLink]="['/sessions']">View Data</a>
     </div>
   </div>
 </div>
