--- a/angular-src/src/app/components/session-details/session-details.component.html
+++ b/angular-src/src/app/components/session-details/session-details.component.html
@@ -23,7 +23,8 @@
     </div>
   </div>
 </div>
-<div class="pull-right">
+
+<div class="pull-right options">
   <a class="btn btn-warning" href="sessions/edit/{{session._id}}">Edit Details</a> |
   <a class="btn btn-danger" (click)="this.deleteSession()">Delete Session</a>
 </div>
