--- a/angular-src/src/app/app.component.html
+++ b/angular-src/src/app/app.component.html
@@ -1,8 +1,22 @@
 <app-navbar> </app-navbar>
 
-<div class="contaner">
+<main>
   <ng-flash-message></ng-flash-message>
-  <div class="container">
+  <div class="container app-view">
     <router-outlet></router-outlet>
   </div>
-</div>
+</main>
+
+
+<footer>
+  <div class="container">
+    <div class="text-center">
+      <div class="icons">
+        <h3>Find This Project on Githib</h3>
+        <a href="https://github.com/Alrobbertz/RTS-Development">
+          <i class="fab fa-github fa-3x"></i>
+        </a>
+      </div>
+    </div>
+  </div>
+</footer>
