Removed Register and /sessions from Navbar, Made a Dashbaoard, css is terrible

--- a/angular-src/src/app/app.component.html
+++ b/angular-src/src/app/app.component.html
@@ -2,21 +2,18 @@
 
 <main>
   <ng-flash-message></ng-flash-message>
-  <div class="container app-view">
+  <div class="app-view">
     <router-outlet></router-outlet>
   </div>
 </main>
 
-
 <footer>
-  <div class="container">
-    <div class="text-center">
-      <div class="icons">
-        <h3>Find This Project on Githib</h3>
-        <a href="https://github.com/Alrobbertz/RTS-Development">
-          <i class="fab fa-github fa-3x"></i>
-        </a>
-      </div>
+  <div class="text-center">
+    <div class="icons">
+      <h3>Find This Project on Githib</h3>
+      <a href="https://github.com/Alrobbertz/RTS-Development">
+        <i class="fab fa-github fa-3x"></i>
+      </a>
     </div>
   </div>
 </footer>
