--- a/angular-src/src/app/app.component.css
+++ b/angular-src/src/app/app.component.css
@@ -4,18 +4,11 @@ footer {
   width: 100%;
   height: 120px; /* Set the fixed height of the footer here */
   line-height: 30px; /* Vertically center the text there */
-  background-color: #4a4a4a;
+  background-color: #5e5e5e;
 }
 
 h3 {
   padding-top: 20px;
-}
-a .icons {
-  padding: 0.4rem;
-}
-
-.icons a:hover {
-  color: #fff;
 }
 
 main {
@@ -29,12 +22,54 @@ main .icons a {
   padding: 0.4rem;
 }
 main .icons a:hover {
-  color: #eece1a;
-  transition: all 0.5s ease-out;
+  color: #fff;
 }
 main#home {
   overflow: hidden;
 }
 main#home h1 {
   margin-top: 20vh;
+}
+
+@media screen and (min-width: 1171px) {
+  .projects {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+
+@media screen and (min-width: 769px) and (max-width: 1170px) {
+  main {
+    align-items: center;
+    text-align: center;
+  }
+  main .lg-heading {
+    line-height: 1;
+    margin-bottom: 1rem;
+  }
+  .projects {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media screen and (max-width: 768px) {
+  main {
+    align-items: center;
+    text-align: center;
+  }
+  main .lg-heading {
+    line-height: 1;
+    margin-bottom: 1rem;
+  }
+  .projects {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media screen and (max-width: 500px) {
+  main#home h1 {
+    margin-top: 10vh;
+  }
+  .projects {
+    grid-template-columns: 1fr;
+  }
 }
