--- a/angular-src/src/app/components/dashboard/dashboard.component.html
+++ b/angular-src/src/app/components/dashboard/dashboard.component.html
@@ -1,3 +1,24 @@
-<h2 class="page-header">Dashboard</h2>
-<p>Welcome to your dashboard</p>
-<a class="btn btn-primary btn-lg" [routerLink]="['/sessions/upload']">Upload a New Recording </a>
+<h1 class="lg-heading">
+    Welcome to Your
+    <span class="text-secondary">Dashboard</span>
+</h1>
+<h2 class="sm-heading">
+    Will be adding more featues soon...
+</h2>
+
+<div class="projects">
+    <div class="item">
+        <a [routerLink]="['/sessions']" class="btn-light tile">
+            <i class="fas fa-ship fa-4x"></i>
+            <h3>View Data</h3>
+        </a>
+    </div>
+
+    <div class="item">
+        <a [routerLink]="['/sessions/upload']" class="btn-light tile">
+            <i class="fas fa-upload fa-4x"></i>
+            <h3>Upload Session</h3>
+        </a>
+    </div>
+
+</div>
