--- a/angular-src/src/app/components/home/home.component.html
+++ b/angular-src/src/app/components/home/home.component.html
@@ -1,13 +1,17 @@
 <div>
   <div class="jumbotron logo text-center">
-    <h1>RTS Development App</h1>
-    <h3 class="lead">An investigation into the feasibility and practicality of low-cost oarlock instrumentation.</h3>
+    <h1 class="display-4">RTS Develoment App</h1>
+    <h3 class="lead">An investigation into the feasability and practicailty practicality of low-cost oarlock instrumentation.</h3>
+
     <div *ngIf="!authService.loggedIn()">
-      <a class="btn btn-info" [routerLink]="['/register']">Register</a>
-      <a class="btn btn-primary" [routerLink]="['/login']">Login </a>
+      <p class="lead">
+        <a class="btn btn-primary btn-lg" [routerLink]="['/login']">Login </a>
+      </p>
     </div>
     <div *ngIf="authService.loggedIn()">
-      <a class="btn btn-primary btn-lg" [routerLink]="['/sessions']">View Data</a>
+      <p class="lead">
+        <a class="btn btn-primary btn-xl" [routerLink]="['/sessions']">View Data</a>
+      </p>
     </div>
   </div>
 </div>
