--- a/angular-src/src/styles.css
+++ b/angular-src/src/styles.css
@@ -10,7 +10,7 @@ body {
   height: 100%;
   margin: 0;
   line-height: 1.5;
-  margin-bottom: 60px; /* Margin bottom by footer height */
+  margin-bottom: 120px; /* Margin bottom by footer height */
 }
 body#bg-img {
   background: url(../src/img/home.jpg);
@@ -25,12 +25,12 @@ body#bg-img:after {
   width: 100%;
   height: 100%;
   z-index: -1;
-  background: rgba(152, 152, 152, 0.6);
+  background: rgba(89, 89, 89, 0.5);
 }
 
 main {
-  padding: 4rem;
-  min-height: calc(100vh - 60px);
+  padding: 1rem;
+  min-height: calc(100vh - 120px);
 }
 main .icons {
   margin-top: 1rem;
@@ -39,7 +39,7 @@ main .icons a {
   padding: 0.4rem;
 }
 main .icons a:hover {
-  color: #eece1a;
+  color: #fff;
   transition: all 0.5s ease-out;
 }
 main#home {
@@ -47,4 +47,47 @@ main#home {
 }
 main#home h1 {
   margin-top: 20vh;
+}
+
+@media screen and (min-width: 1171px) {
+  .projects {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+
+@media screen and (min-width: 769px) and (max-width: 1170px) {
+  main {
+    align-items: center;
+    text-align: center;
+  }
+  main .lg-heading {
+    line-height: 1;
+    margin-bottom: 1rem;
+  }
+  .projects {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media screen and (max-width: 768px) {
+  main {
+    align-items: center;
+    text-align: center;
+  }
+  main .lg-heading {
+    line-height: 1;
+    margin-bottom: 1rem;
+  }
+  .projects {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media screen and (max-width: 500px) {
+  main#home h1 {
+    margin-top: 10vh;
+  }
+  .projects {
+    grid-template-columns: 1fr;
+  }
 }
