--- a/angular-src/src/app/app.component.html
+++ b/angular-src/src/app/app.component.html
@@ -1,13 +1,8 @@
 <app-navbar> </app-navbar>
+<ng-flash-message></ng-flash-message>
+<router-outlet></router-outlet>
 
-<main>
-  <ng-flash-message></ng-flash-message>
-  <div class="app-view">
-    <router-outlet></router-outlet>
-  </div>
-</main>
-
-<footer>
+<footer class="sticky-footer">
   <div class="text-center">
     <div class="icons">
       <h3>Find This Project on Githib</h3>
