--- a/angular-src/src/app/app.component.css
+++ b/angular-src/src/app/app.component.css
@@ -1,75 +1,17 @@
-footer {
-  position: absolute;
+.sticky-footer {
   bottom: 0;
+  position: absolute;
   width: 100%;
-  height: 120px; /* Set the fixed height of the footer here */
-  line-height: 30px; /* Vertically center the text there */
+  height: 8rem; /* Set the fixed height of the footer here */
   background-color: #5e5e5e;
 }
 
-h3 {
-  padding-top: 20px;
-}
-
-main {
-  padding: 4rem;
-  min-height: calc(100vh - 120px);
-}
-main .icons {
+footer .icons {
   margin-top: 1rem;
 }
-main .icons a {
+foter .icons a {
   padding: 0.4rem;
 }
-main .icons a:hover {
+footer .icons a:hover {
   color: #fff;
-}
-main#home {
-  overflow: hidden;
-}
-main#home h1 {
-  margin-top: 20vh;
-}
-
-@media screen and (min-width: 1171px) {
-  .projects {
-    grid-template-columns: repeat(4, 1fr);
-  }
-}
-
-@media screen and (min-width: 769px) and (max-width: 1170px) {
-  main {
-    align-items: center;
-    text-align: center;
-  }
-  main .lg-heading {
-    line-height: 1;
-    margin-bottom: 1rem;
-  }
-  .projects {
-    grid-template-columns: repeat(2, 1fr);
-  }
-}
-
-@media screen and (max-width: 768px) {
-  main {
-    align-items: center;
-    text-align: center;
-  }
-  main .lg-heading {
-    line-height: 1;
-    margin-bottom: 1rem;
-  }
-  .projects {
-    grid-template-columns: repeat(2, 1fr);
-  }
-}
-
-@media screen and (max-width: 500px) {
-  main#home h1 {
-    margin-top: 10vh;
-  }
-  .projects {
-    grid-template-columns: 1fr;
-  }
 }
