--- a/angular-src/src/app/components/dashboard/dashboard.component.css
+++ b/angular-src/src/app/components/dashboard/dashboard.component.css
@@ -1,4 +1,32 @@
-.projects {
+main {
+  height: 88rem;
+}
+
+main#dash-img {
+  background: url(../../../img/bg/dash.jpg);
+  background-attachment: relative;
+  background-size: cover;
+}
+
+.container {
+  background: rgba(55, 55, 55, 0.5);
+  height: 100%;
+}
+
+.lg-heading {
+  font-size: 4rem;
+  text-align: center;
+  padding: 1rem 1rem;
+  color: #fff;
+}
+
+.sm-heading {
+  margin-bottom: 2rem;
+  padding: 0.2rem 1rem;
+  background: rgba(162, 162, 162, 0.5);
+}
+
+.tiles {
   display: grid;
   grid-gap: 0.7rem;
   grid-template-columns: repeat(2, 1fr);
@@ -19,19 +47,4 @@
 .btn-light {
   background: #c4c4c4;
   color: #333;
-}
-
-.lg-heading {
-  font-size: 4rem;
-}
-
-.sm-heading {
-  margin-bottom: 2rem;
-  padding: 0.2rem 1rem;
-  background: rgba(73, 73, 73, 0.5);
-}
-
-i {
-  padding: 1rem 1rem;
-  display: block;
 }
