--- a/angular-src/src/app/components/dashboard/dashboard.component.html
+++ b/angular-src/src/app/components/dashboard/dashboard.component.html
@@ -1,24 +1,28 @@
-<h1 class="lg-heading">
-    Welcome to Your
-    <span class="text-secondary">Dashboard</span>
-</h1>
-<h2 class="sm-heading">
-    Will be adding more featues soon...
-</h2>
+<main id="dash-img">
+    <div class="container">
+        <h1 class="lg-heading">
+            Welcome to Your
+            <span class="text-secondary">Dashboard</span>
+        </h1>
+        <h2 class="sm-heading">
+            Will be adding more featues soon...
+        </h2>
 
-<div class="projects">
-    <div class="item">
-        <a [routerLink]="['/sessions']" class="btn-light tile">
-            <i class="fas fa-ship fa-4x"></i>
-            <h3>View Data</h3>
-        </a>
+        <div class="tiles">
+            <div class="tile">
+                <a [routerLink]="['/sessions']" class="btn-light tile">
+                    <h3>View Data</h3>
+                    <i class="fas fa-ship fa-4x"></i>
+                </a>
+            </div>
+
+            <div class="tile">
+                <a [routerLink]="['/sessions/upload']" class="btn-light tile">
+                    <h3>Upload Session</h3>
+                    <i class="fas fa-upload fa-4x"></i>
+                </a>
+            </div>
+
+        </div>
     </div>
-
-    <div class="item">
-        <a [routerLink]="['/sessions/upload']" class="btn-light tile">
-            <i class="fas fa-upload fa-4x"></i>
-            <h3>Upload Session</h3>
-        </a>
-    </div>
-
-</div>
+</main>
