--- a/angular-src/src/app/components/home/home.component.css
+++ b/angular-src/src/app/components/home/home.component.css
@@ -1,9 +1,15 @@
-.logo {
-  background: url("../../../img/jumbotron-logo.png") top center no-repeat;
-  height: 100vh;
-  width: 100%;
-  background-repeat: no-repeat;
-  background-position: center;
-  -webkit-background-size: cover;
+main {
+  height: 88rem;
+}
+
+main#home-img {
+  background: url(../../../img/bg/home.jpg);
+  background-attachment: relative;
   background-size: cover;
+  z-index: 1;
+}
+
+main .jumbotron {
+  background: url("../../../img/jumbotron-logo.png") top center no-repeat;
+  height: 100%;
 }
