--- a/angular-src/src/app/components/about/about.component.html
+++ b/angular-src/src/app/components/about/about.component.html
@@ -1,1 +1,11 @@
-<h4>Rowing Telemetry Systems</h4>
+<main id="about-img">
+    <div class="container">
+        <h1 class="lg-heading">
+            What is RTS?
+        </h1>
+        <h2 class="sm-heading">
+            Nobody knows... not even Cole
+        </h2>
+
+    </div>
+</main>
