--- a/angular-src/src/app/components/home/home.component.html
+++ b/angular-src/src/app/components/home/home.component.html
@@ -1,7 +1,7 @@
 <main id="home-img">
   <div class="jumbotron text-center">
     <h1 class="display-4">RTS Develoment App</h1>
-    <h3 class="lead">An investigation into the feasability and practicailty practicality of low-cost oarlock instrumentation.</h3>
+    <h3 class="lead">An investigation into the feasability and practicality of low-cost oarlock instrumentation.</h3>
     <div *ngIf="!authService.loggedIn()">
       <p class="lead">
         <a class="btn btn-primary btn-lg" [routerLink]="['/login']">Login </a>
