--- a/angular-src/src/styles.css
+++ b/angular-src/src/styles.css
@@ -1,14 +1,45 @@
 /* You can add global styles to this file, and also import other style files */
+
+:root {
+  --primary-color: #ddd;
+  --dark: #333;
+  --light: #fff;
+  --fancy: rgb(7, 129, 228);
+  --shadow: 0 1px 5px rgba(104, 104, 104, 0.8);
+}
+
 html {
+  box-sizing: border-box;
   position: relative;
-  min-height: 100%;
+  height: 100%;
+  background: var(--dark);
+  color: var(--dark);
 }
 
 body {
-  background: #333;
-  color: #fff;
+  color: var(--light);
   height: 100%;
-  margin: 0;
   line-height: 1.5;
-  margin-bottom: 8rem; /* Margin bottom by footer height */
+}
+
+img {
+  max-width: 100%;
+}
+
+.btn {
+  padding: 0.5;
+  font-size: 1.5rem;
+  background: var(--dark);
+  color: var(--light);
+  box-shadow: var(--shadow);
+}
+
+.btn:hover {
+  color: var(--fancy);
+  background: #444;
+}
+
+.wrapper {
+  display: grid;
+  grid-gap: 20px;
 }
