--- a/angular-src/src/app/components/about/about.component.css
+++ b/angular-src/src/app/components/about/about.component.css
@@ -1,7 +1,8 @@
 /* General Style */
 
 main {
-  height: 88rem;
+  height: 100%;
+  bottom: 0;
 }
 
 main#about-img {
@@ -13,7 +14,7 @@ main#about-img {
 /* COMPONENT */
 
 .container {
-  background: rgba(55, 55, 55, 0.5);
+  background: rgba(45, 45, 45, 0.6);
   height: 100%;
 }
 
@@ -27,5 +28,52 @@ main#about-img {
 .sm-heading {
   margin-bottom: 2rem;
   padding: 0.2rem 1rem;
-  background: rgba(162, 162, 162, 0.5);
+  background: rgba(221, 221, 221, 0.9);
+}
+
+.block {
+  margin-bottom: 1rem;
+  padding: 0.1rem 1rem;
+  color: #000;
+  background: rgba(221, 221, 221, 0.9);
+}
+
+.main-text p {
+  padding: 0.5rem 1rem;
+  font-size: 1.5rem;
+}
+
+.main-text ul {
+  font-size: 1.4rem;
+  list-style: none;
+}
+
+.main-text li {
+  padding: 0.5rem 2rem;
+}
+
+.main-images {
+  display: grid;
+  grid-template-areas: "oarlock oarlock-frame";
+}
+
+.oarlock {
+  grid-area: oarlock;
+  align-self: center;
+  box-shadow: var(--shadow);
+  max-width: 100%;
+  margin: 1rem 1rem;
+}
+
+.oarlock-frame {
+  grid-area: oarlock-frame;
+  align-self: center;
+  box-shadow: var(--shadow);
+  max-width: 100%;
+  margin: 1rem 1rem;
+}
+
+.link {
+  font-size: 1.3rem;
+  padding: 0.5rem 1rem;
 }
