--- a/angular-src/src/styles.css
+++ b/angular-src/src/styles.css
@@ -9,17 +9,15 @@
 }
 
 html {
-  box-sizing: border-box;
   position: relative;
-  height: 100%;
+  min-height: 100%;
   background: var(--dark);
   color: var(--dark);
 }
 
 body {
   color: var(--light);
-  height: 100%;
-  line-height: 1.5;
+  margin-bottom: 50px;
 }
 
 img {
@@ -39,7 +37,34 @@ img {
   background: #444;
 }
 
-.wrapper {
-  display: grid;
-  grid-gap: 20px;
+.sticky-footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 50px; /* Set the fixed height of the footer here */
+  line-height: 60px; /* Vertically center the text there */
+  color: var(--light);
+  background: var(--dark);
+}
+
+.icons {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.icons h3 {
+  color: #fff;
+}
+
+.icons a {
+  color: #fff;
+}
+
+.icons a:hover {
+  color: var(--fancy);
+}
+
+.icons h3:hover {
+  text-decoration: none;
+  color: var(--fancy);
 }
