--- a/angular-src/src/styles.css
+++ b/angular-src/src/styles.css
@@ -5,6 +5,7 @@
   --dark: #333;
   --light: #fff;
   --fancy: rgb(7, 129, 228);
+  --bg-fade: rgba(45, 45, 45, 0.6);
   --shadow: 0 1px 5px rgba(104, 104, 104, 0.8);
 }
 
@@ -34,7 +35,7 @@ img {
 
 .btn:hover {
   color: var(--fancy);
-  background: #444;
+  background: var(--light);
 }
 
 .sticky-footer {
