View-Sessions page done, abstracted a lot of stuff
.container {
  background: var(--bg-fade);
  height: 100%;
}

.block {
  margin-bottom: 1rem;
  padding: 0.1rem 1rem;
  color: #000;
  background: var(--primary-color);
}

.lg-heading {
  font-size: 5rem;
  text-align: center;
  padding: 1rem 1rem;
  color: #fff;
}

.sm-heading {
  font-size: 2rem;
  margin-top: 2rem;
  margin-bottom: 2rem;
  padding: 0.2rem 1rem;
  background: var(--light);
  box-shadow: var(--shadow);
}
.btn {
  margin-top: 1rem;
  margin-bottom: 1rem;
  padding: 0.5;
  font-size: 1.5rem;
  background: var(--dark);
  color: var(--light);
  box-shadow: var(--shadow);
}

.btn:hover {
  color: var(--fancy);
  background: var(--light);
}

--- a/angular-src/src/app/components/about/about.component.html
+++ b/angular-src/src/app/components/about/about.component.html
@@ -1,7 +1,7 @@
 <main id="about-img">
     <div class="container">
         <h1 class="lg-heading">
-            About Rowing Telemetry Systems
+            <span class="text-secondary">About </span>Rowing Telemetry Systems
         </h1>
         <h2 class="sm-heading">
             A brief description...
