Session Details Done

--- a/angular-src/src/app/components/session-details/session-details.component.css
+++ b/angular-src/src/app/components/session-details/session-details.component.css
@@ -12,46 +12,10 @@ main#gen-img {
 
 /* COMPONENT */
 
-.go-back {
-  margin-top: 2rem;
-  margin-left: 0.5rem;
-  margin-bottom: 2rem;
+.lg-heading {
+  color: var(--dark);
 }
 
-.container {
-  background: rgba(167, 167, 167, 0.6);
-  height: 100%;
-}
-
-.panel {
-  margin: 2 rem;
-  background: #fff;
-}
-
-h1 {
-  margin: 2rem;
-  font-size: 3rem;
-  text-align: left;
-  padding: 1rem 1rem;
-  color: #000;
-}
-
-h5 {
-  margin: 1rem;
-  font-size: 1rem;
-  text-align: cent;
-  padding: 1rem 1rem;
-  color: #000;
-}
-
-.sm-heading {
-  font-size: 2rem;
-  padding: 0.2rem 1rem;
-  margin: 0.5rem;
-  font-weight: bold;
-  background: rgba(167, 167, 167, 0.6);
-}
-
-.options {
-  margin-top: 2rem;
+.block {
+  background: var(--light);
 }
