--- a/angular-src/src/app/components/session-details/session-details.component.html
+++ b/angular-src/src/app/components/session-details/session-details.component.html
@@ -1,32 +1,22 @@
 <main id="gen-img">
   <div class="container">
 
-    <a class="btn btn-primary go-back" [routerLink]="['/sessions']">Go Back</a>
+    <a class="btn btn-primary" [routerLink]="['/sessions']">Go Back</a>
 
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        <h1 class="lg-heading">{{session.name}}</h1>
-      </div>
-      <div class="panel-body">
-        <h3 class="sm-heading">Date Recorded: {{session.record_date}}</h3>
-        <h5>Type of Recording: {{session.session_type}}</h5>
-        <!-- TODO Try unsng square brackets to stop loading data before it gets here -->
-        <div class="row">
-          <div class="col-md-12">
-            <div style="display: block;">
-              <canvas baseChart width="600" height="400" [datasets]="lineChartData" [labels]="lineChartLabels" [options]="lineChartOptions"
-                [colors]="lineChartColors" [legend]="lineChartLegend" [chartType]="lineChartType" (chartHover)="chartHovered($event)"
-                (chartClick)="chartClicked($event)">
-              </canvas>
-            </div>
-          </div>
-        </div>
+    <div class="block">
+      <h1 class="lg-heading">{{session.name}}</h1>
+      <h3 class="sm-heading">Date Recorded: {{session.record_date}}</h3>
+      <h3 class="sm-heading">Type of Recording: {{session.session_type}}</h3>
+      <canvas baseChart width="600" height="400" [datasets]="lineChartData" [labels]="lineChartLabels" [options]="lineChartOptions"
+        [colors]="lineChartColors" [legend]="lineChartLegend" [chartType]="lineChartType" (chartHover)="chartHovered($event)"
+        (chartClick)="chartClicked($event)">
+      </canvas>
+
+      <div class="pull-right">
+        <a class="btn btn-warning" href="sessions/edit/{{session._id}}">Edit Details</a> |
+        <a class="btn btn-danger" href="sessions" (click)="this.deleteSession()">Delete Session</a>
       </div>
     </div>
 
-    <div class="pull-right options">
-      <a class="btn btn-warning" href="sessions/edit/{{session._id}}">Edit Details</a> |
-      <a class="btn btn-danger" href="sessions" (click)="this.deleteSession()">Delete Session</a>
-    </div>
   </div>
 </main>
