--- a/angular-src/src/app/components/edit-session/edit-session.component.html
+++ b/angular-src/src/app/components/edit-session/edit-session.component.html
@@ -1,47 +1,72 @@
-<div [hidden]="submitted">
-  <h1>Edit Session Form</h1>
-  <form (ngSubmit)="onSubmit()" #editSessionForm="ngForm">
-    <div class="form-group">
-      <label for="name">SessionName</label>
-      <input type="text" class="form-control" id="name" required [(ngModel)]="model.name" name="name" #name="ngModel">
-      <div [hidden]="name.valid || name.pristine" class="alert alert-danger">
-        Name is required
+<main id="gen-img">
+  <div class="container">
+    <div class="block">
+      <div [hidden]="submitted">
+        <h3 class="sm-heading">Edit Session Details</h3>
+        <form (ngSubmit)="onSubmit()" #editSessionForm="ngForm">
+          <div class="form-group">
+            <label for="name">SessionName</label>
+            <input type="text" class="form-control" id="name" required [(ngModel)]="model.name" name="name" #name="ngModel">
+            <div [hidden]="name.valid || name.pristine" class="alert alert-danger">
+              Name is required
+            </div>
+          </div>
+
+          <div class="form-group">
+            <label for="record_date">Date Recorded</label>
+            <input type="text" class="form-control" id="record_date" [(ngModel)]="model.record_date" name="record_date">
+          </div>
+
+          <div class="form-group">
+            <label for="session_type">Session Type</label>
+            <select class="form-control" id="session_type" required [(ngModel)]="model.session_type" name="session_type">
+              <option *ngFor="let opt of session_type_options" [value]="opt">{{opt}}</option>
+            </select>
+          </div>
+
+          <div class="pull-right">
+            <button type="button" class="btn btn-default" (click)="clearInput(); editSessionForm.reset()">Clear</button>
+            |
+            <button type="submit" class="btn btn-success" [disabled]="!editSessionForm.form.valid">Submit</button>
+          </div>
+
+        </form>
+      </div>
+      <div [hidden]="!submitted">
+        <h3 class="sm-heading">You submitted the following:</h3>
+        <div class="row">
+          <div class="col-md-3">
+            <h5>Name</h5>
+          </div>
+          <div class="col-md-9">
+            <h5>{{ model.name }}</h5>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-3">
+            <h5>Date Recorded</h5>
+          </div>
+          <div class="col-md-9 ">
+            <h5>{{ model.record_date }}</h5>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-3">
+            <h5>Session Type</h5>
+          </div>
+          <div class="col-md-9 ">
+            <h5>{{ model.session_type}}</h5>
+          </div>
+        </div>
+        <br>
+
+        <div class="pull-right">
+          <button class="btn btn-primary" (click)="submitted=false">Edit Again</button> |
+          <a class="btn" href="sessions">View All Sessions</a>
+        </div>
+
       </div>
     </div>
 
-    <div class="form-group">
-      <label for="record_date">Date Recorded</label>
-      <input type="text" class="form-control" id="record_date" [(ngModel)]="model.record_date" name="record_date">
-    </div>
-
-    <div class="form-group">
-      <label for="session_type">Session Type</label>
-      <select class="form-control" id="session_type" required [(ngModel)]="model.session_type" name="session_type">
-        <option *ngFor="let opt of session_type_options" [value]="opt">{{opt}}</option>
-      </select>
-    </div>
-
-    <button type="button" class="btn btn-default" (click)="clearInput(); editSessionForm.reset()">Clear</button>
-    <button type="submit" class="btn btn-success" [disabled]="!editSessionForm.form.valid">Submit</button>
-
-  </form>
-</div>
-<div [hidden]="!submitted">
-  <h2>You submitted the following:</h2>
-  <div class="row">
-    <div class="col-md-3">Name</div>
-    <div class="col-md-9  pull-left">{{ model.name }}</div>
   </div>
-  <div class="row">
-    <div class="col-md-3">Date Recorded</div>
-    <div class="col-md-9 pull-left">{{ model.record_date }}</div>
-  </div>
-  <div class="row">
-    <div class="col-md-3">Session Type</div>
-    <div class="col-md-9 pull-left">{{ model.session_type}}</div>
-  </div>
-  <br>
-  <button class="btn btn-primary" (click)="submitted=false">Edit Again</button>
-  <a href="sessions">View All Sessions</a>
-
-</div>
+</main>
