--- a/angular-src/src/app/components/upload-session/upload-session.component.css
+++ b/angular-src/src/app/components/upload-session/upload-session.component.css
@@ -1,7 +1,9 @@
 /* General Style */
 
+/* General Style */
+
 main {
-  height: 88rem;
+  height: 115rem;
 }
 
 main#gen-img {
@@ -12,54 +14,18 @@ main#gen-img {
 
 /* COMPONENT */
 
-.container {
-  background: rgba(45, 45, 45, 0.9);
-  height: 100%;
+.form-group {
+  background: var(--light);
+  padding: 1rem 2rem;
+  box-shadow: var(--shadow);
 }
 
-h1 {
-  font-size: 3rem;
-  text-align: center;
-  padding: 1rem 1rem;
-  color: #000;
-}
-
-.sm-heading {
+label {
   font-size: 2rem;
-  padding: 0.2rem 1rem;
-  margin: 0.5rem;
-  font-weight: bold;
-}
-
-.row {
-  margin-left: 5rem;
-  margin-right: 5rem;
-  margin-top: 2rem;
-  margin-bottom: 2rem;
-  background: #fff;
-  opacity: 0.9;
 }
 
 label {
   color: #000;
   font-size: 1.5rem;
   text-decoration: underline;
-}
-
-.row h5 {
-  padding: 0.2rem 1rem;
-  background: rgba(162, 162, 162, 0.5);
-  font-weight: bold;
-}
-
-.row p {
-  color: #000;
-}
-
-.row a {
-  margin: 2rem;
-}
-
-.row .btn {
-  margin-top: 2rem;
 }
