--- a/angular-src/src/app/components/about/about.component.html
+++ b/angular-src/src/app/components/about/about.component.html
@@ -47,7 +47,7 @@
             </div>
         </div>
 
-        <div class="block">
+        <!-- <div class="block">
             <div class="main-text">
                 <p>
                     Prototype Oarlock Design
@@ -55,13 +55,13 @@
             </div>
             <div class="main-images">
                 <div class="oarlock">
-                    <img src="oarlock.png" alt="Oarlock">
+                    <img src="./oarlock.png" alt="Oarlock">
                 </div>
                 <div class="oarlock-frame">
-                    <img src="oarlock-frame.png" alt="Oarlock-Frame">
+                    <img src="./oarlock-frame.png" alt="Oarlock-Frame">
                 </div>
             </div>
-        </div>
+        </div> -->
 
         <div class="block">
             <div class="main-text">
