--- a/angular-src/src/app/components/profile/profile.component.css
+++ b/angular-src/src/app/components/profile/profile.component.css
@@ -1,7 +1,7 @@
 /* General Style */
 
 main {
-  height: 88rem;
+  height: 115rem;
 }
 
 main#gen-img {
@@ -12,34 +12,13 @@ main#gen-img {
 
 /* COMPONENT */
 
-.container {
-  background: rgba(45, 45, 45, 0.9);
-  height: 100%;
-}
-
-h1 {
-  font-size: 3rem;
-  text-align: center;
-  padding: 1rem 1rem;
-  color: #000;
-}
-
-.sm-heading {
-  font-size: 2rem;
-  padding: 0.2rem 1rem;
-  margin: 0.5rem;
-  font-weight: bold;
-}
-
-.row {
-  margin-left: 5rem;
-  margin-right: 5rem;
-  margin-top: 2rem;
-  margin-bottom: 2rem;
-  background: #fff;
-  opacity: 0.9;
-}
-
 .list-group {
-  color: #000000;
+  background: var(--light);
+  padding: 1rem 2rem;
+  box-shadow: var(--shadow);
+}
+
+.list-group-item {
+  margin: 1rem 1rem;
+  font-size: 1.5rem;
 }
