--- a/angular-src/src/app/components/profile/profile.component.html
+++ b/angular-src/src/app/components/profile/profile.component.html
@@ -1,15 +1,14 @@
 <main id="gen-img">
   <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <div *ngIf='user'>
-          <h2 class="page-header">{{user.name}}</h2>
-          <ul class="list-group">
-            <li class="list-group-item">Username: {{user.username}}</li>
-            <li class="list-group-item">Email: {{user.email}}</li>
-          </ul>
-        </div>
+    <div class="block">
+      <div *ngIf='user'>
+        <h3 class="sm-heading">{{user.name}}</h3>
+        <ul class="list-group">
+          <li class="list-group-item">Username: {{user.username}}</li>
+          <li class="list-group-item">Email: {{user.email}}</li>
+        </ul>
       </div>
     </div>
+
   </div>
 </main>
