--- a/angular-src/src/styles.css
+++ b/angular-src/src/styles.css
@@ -31,6 +31,7 @@ body {
   padding: 0.1rem 1rem;
   color: #000;
   background: var(--primary-color);
+  box-shadow: var(--shadow);
 }
 
 .lg-heading {
