New About Page!

--- a/angular-src/src/app/components/about/about.component.html
+++ b/angular-src/src/app/components/about/about.component.html
@@ -1,88 +1,22 @@
-<main id="about-img">
-    <div class="container">
-        <h1 class="lg-heading">
-            <span class="text-secondary">About </span>Rowing Telemetry Systems
-        </h1>
-        <h2 class="sm-heading">
-            A brief description...
-        </h2>
-
-        <div class="block">
-            <div class="main-text">
-                <p>
-                    Rowing Telemetry Systems (RTS) is an investigation into the possibility of producing low-cost
-                    instrumented
-                    oarlocks for competitive racing shells. Affordable instrumented oarlocks, accessible to High School
-                    and
-                    College level clubs would provide a significant competitive advantage. The RTS team strives to meet
-                    the
-                    following goals,
-                </p>
-                <ul>
-                    <li>
-                        Oarlocks must sell for significantly less than any competition, the team is motivated produce
-                        an oarlock that can be retailed for a tenth of the average competition price.
-                    </li>
-                    <li>
-                        Create a new force measuring architecture to mechanically isolate forces perpendicular to the
-                        oar shaft, providing significantly more precise force values.
-                    </li>
-                    <li>
-                        Integrate an angle sensor accurate to a quarter of a degree, capable of handling 5+ million
-                        cycles.
-
-                    </li>
-                    <li>
-                        Provide novel metrics, giving coaches and rowers tangible value to gauge progress.
-                    </li>
-                    <li>
-                        Create an oarlock that will be significantly easier to install and operate; reducing
-                        installation time to under 1 minute by eliminating the need to calibrate.
-                    </li>
-                    <li>
-                        Considerably more visually pleasing than any instrumented oarlock on the market, creating a
-                        product that looks to be designed for instrumentation in mind.
-                    </li>
-                </ul>
-            </div>
+ <!-- About -->
+ <section class="content-section bg-light" id="about">
+    <div class="container text-center">
+      <div class="row no-gutters">
+        <div class="col-lg-10 mx-auto">
+          <h2 class="mb-5">About Me</h2>
         </div>
-
-        <!-- <div class="block">
-            <div class="main-text">
-                <p>
-                    Prototype Oarlock Design
-                </p>
-            </div>
-            <div class="main-images">
-                <div class="oarlock">
-                    <img src="./oarlock.png" alt="Oarlock">
-                </div>
-                <div class="oarlock-frame">
-                    <img src="./oarlock-frame.png" alt="Oarlock-Frame">
-                </div>
-            </div>
-        </div> -->
-
-        <div class="block">
-            <div class="main-text">
-                <p>
-                    The purpose of this website is to facilitate the widespread testing of prototype oarlocks by
-                    providing a platform for rudimentary stroke analysis and data collection. All data collected
-                    through this website will be evaluated with the goal of continually improving hardware, firmware
-                    and software.
-                </p>
-
-                <p>
-                    For further information contact: <b>info@rowingts.com</b>
-                </p>
-                <p>
-                    For bugs or errors found while navigating the site contact: <b>webdev@rowingts.com</b>
-
-                </p>
-
-            </div>
-        </div>
-
-
-    </div>
-</main>
+      <div class="container">
+          <div class="row">
+              <div class='col-sm'>
+                  <img class="img-thumbnail about-image" src="img/IMG_6934.jpg" alt="">
+              </div>
+              <div class="col-sm">
+                  <p class="lead mb-5">I am currently studing Robotics Engineering at Worcester Polytechnic Institute. In my free time, I enjoy playing squash, hiking and photography. <br> 
+                      </p>
+                      <a class="btn btn-dark btn-xl js-scroll-trigger" href="https://www.linkedin.com/in/daniel-shrives-760215121/">Linkedin</a>
+              </div>
+          </div>
+      </div>  
+      </div>
+  </div>
+  </section>
